# darve-server

./: .dockerignore  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.staging  LICENCE.md  README.md  blocked_words.txt  darve_super_tasks.json  darve_weekly_tasks.json  docker-compose.yml  fly.toml  justfile  ~
.claude/skills/: entity-sdb.md  transform-entity-service.md
.github/workflows/: api-tests.yml  log.yml
assets/built/: index-C7wXJcvj.js
sb_community/: Cargo.toml
sb_community/src/: entity.rs  lib.rs  routes.rs
sb_middleware/: Cargo.toml
sb_middleware/src/: ctx.rs  db.rs  error.rs  lib.rs  mw_ctx.rs  mw_req_logger.rs
sb_middleware/src/utils/: cookie_utils.rs  db_utils.rs  extractor_utils.rs  request_utils.rs  string_utils.rs
sb_task/: Cargo.toml
sb_task/src/: entity.rs  lib.rs  routes.rs
sb_user_auth/: Cargo.toml
sb_user_auth/src/: entity.rs  routes.rs  utils.rs
sb_user_auth/src/entity/: access_gain_action_entitiy.rs  access_right_entity.rs  access_rule_entity.rs  authentication_entity.rs  authorization_entity.rs  follow_entitiy.rs  local_user_entity.rs  notification_entitiy.rs  payment_action_entitiy.rs  user_notification_entitiy.rs
sb_user_auth/src/routes/: access_gain_action_routes.rs  access_rule_routes.rs  follow_routes.rs  init_server_routes.rs  join_routes.rs  login_routes.rs  register_routes.rs  user_notification_routes.rs  webauthn.rs
sb_user_auth/src/routes/webauthn/: auth.rs  error.rs  startup.rs  webauthn_routes.rs
sb_user_auth/src/utils/: askama_filter_util.rs  template_utils.rs  validate_utils.rs
sb_wallet/: Cargo.toml
sb_wallet/src/: entity.rs  routes.rs
sb_wallet/src/entity/: currency_transaction_entitiy.rs  endowment_action_service.rs  endowment_wallet.rs  freeze_wallet.rs  funding_transaction_entity.rs  lock_transaction_entity.rs  wallet_entitiy.rs  wallet_transaction_entitiy.rs
sb_wallet/src/routes/: wallet_endowment_routes.rs  wallet_routes.rs
scripts/: dev_env.sh  init_test_data.sh  staging_entrypoint.sh
secrets/: base64_encoder_script.sh
server_main/: Cargo.toml
server_main/src/: events_handler.rs  init.rs  main.rs  mw_response_transformer.rs  test_utils.rs  tests.rs
server_main/src/assets/built/: index-CGcolLza.css
server_main/src/tests/: access_rule_tests.rs  authorization_entity_tests.rs  community_routes_test.rs  discussion_tests.rs  discussion_topic_routes.rs  follow_tests.rs  init_server.rs  local_user_entity_tests.rs  post_tests.rs  profile_tests.rs  reply_test.rs  request_offer_tests.rs  request_participation_tests.rs  wallet_entity_tests.rs  wallet_test.rs
src/: config.rs  events_handler.rs  init.rs  lib.rs  main.rs  openapi.json
src/access/: community.rs  discussion.rs  mod.rs  post.rs  task.rs
src/database/: client.rs  mod.rs  query_builder.rs  repository.rs  repository_impl.rs  repository_traits.rs  surrdb_utils.rs  table_names.rs
src/entities/: access_user.rs  discussion_user.rs  mod.rs  nickname.rs  reply.rs  tag.rs  task_donor.rs  task_request.rs  task_request_user.rs  user_notification.rs  verification_code.rs  wallet.rs
src/interfaces/: file_storage.rs  mod.rs  payment.rs  send_email.rs
src/jobs/: mod.rs  task_payment.rs
src/middleware/: auth_data.rs  auth_with_login_access.rs  auth_with_otp_access.rs  bearer_auth.rs  ctx.rs  db.rs  error.rs  limit.rs  mod.rs  mw_ctx.rs  mw_req_logger.rs
src/models/: email.rs  mod.rs  view.rs  web.rs
src/routes/: admin.rs  auth.rs  auth_routes.rs  discussions.rs  editor_tags.rs  events.rs  follows.rs  mod.rs  notifications.rs  openapi.json  posts.rs  reply.rs  stripe_webhook_v2.rs  swagger.rs  tags.rs  tasks.rs  user_otp.rs  users.rs  wallet.rs
src/services/: auth_service.rs  discussion_service.rs  mod.rs  notification_service.rs  post_service.rs  post_user_service.rs  task_service.rs  user_service.rs  verification_code.rs  verification_code_service.rs  wallet.rs  wallet_service.rs
src/utils/: askama_filter_util.rs  blocked_words.rs  darve_tasks.rs  dir_utils.rs  email_sender.rs  generate.rs  hash.rs  jwt.rs  mod.rs  paypal.rs  template_utils.rs  totp.rs  user_presence_guard.rs  validate_utils.rs
templates/emails/: base.html  email_verification.html  header.html  password_verification_code.html  paypal_unclaimed.html  reset_password.html  withdraw_paypal.html
templates/nera/: access_rule_form.html  base.html  community_page.html  dev-content-placeholder.html  discussion_form.html  discussion_page.html  discussion_topic_form.html  discussion_topic_items_edit.html  logout_content.html  mobile-menu.html  notification.html  post-list-1-popup.html  post_form.html  profile_discussion_view_1.html  profile_post-1-popup.html  profile_post-list-1-popup.html  register_form.html  stripe_link_start.html  template_form_page.html  vertical-menu.html
templates/nera1/: access_rule_form.html  base.html  community_form.html  discussion_topic_items_edit.html  discussion_view_1.html  init_form.html  login_form.html  post-1-popup.html  post-reply-list-1.html  post.html  profile_discussion_view_1.html  profile_settings_form.html  register_response.html  top-menu.html
templates/nera2/: access_gain_action_form.html  access_rule_form.html  base.html  community_form.html  community_view_1.html  follow-user.html  (+28 more)
tests/: access_rule_tests.rs  auth_tests.rs  authorization_entity_tests.rs  comment_reply_tests.rs  community_routes_test.rs  create_admin_tasks_tests.rs  discussion_tests.rs  discussion_topic_routes.rs  discussion_users_tests.rs  follow_tests.rs  init_server.rs  local_user_entity_tests.rs  nickname_tests.rs  notifications_sse_tests.rs  notifications_tests.rs  post_access_tests.rs  post_archive_tests.rs  post_delete_tests.rs  post_like_tests.rs  post_tests.rs  post_user_tests.rs  profile_tests.rs  reply_like_tests.rs  reply_test.rs  request_participation_tests.rs  tags_repository_tests.rs  tags_routes_tests.rs  task_payment_tests.rs  tasks_in_idea_posts_tests.rs  tasks_tests.rs  user_otp_tests.rs  user_presence_drop_tests.rs  user_presence_guard_tests.rs  users_status_api_tests.rs  wallet_entity_tests.rs  withdraw_tests.rs
(+174 files in other folders)
