[package]
name = "darve_server"
version = "0.1.14"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart", "http2"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = "1.19.0"
tower-cookies = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tower-sessions = "0.13.0"
tower = { version = "0.5.1" }
webauthn-rs = { version = "0.5.0", features = [
    "danger-allow-state-serialisation",
] }
base64 = "0.22.1"
axum-test = "16.1.0"
askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
askama = { git = "https://github.com/djc/askama.git", branch = "main" }
axum-htmx = { version = "0.6.0", features = ["auto-vary"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.10.6"
futures = "0.3.30"
tokio-stream = { version = "0.1.16", features = ["sync"] }
strum = { version = "0.26.3", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.15", features = ["json"] }
surrealdb = { version = "2.3.3", features = ["kv-mem"] }
tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
axum_typed_multipart = "0.13.0"
tempfile = "3.13.0"
async-stripe = { version = "0.41.0", features = [
    "checkout",
    "runtime-tokio-hyper",
] }
google-cloud-storage = "0.24.0"
async-trait = "0.1.88"
dotenvy = "0.15.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
sentry = { version = "0.39.0", default-features = false, features = [
    "curl",
    "backtrace",
    "contexts",
    "panic",
] }
argon2 = "0.5.3"
totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }

[dev-dependencies]
fake = { version = "4.3.0", features = ["chrono"] }
serial_test = "3.2.0"

[profile.release]
opt-level = 3
