[package]
name = "darve_server"
version = "0.1.19"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "http2"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
once_cell = "1.19.0"
tower-cookies = "0.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tower-sessions = "0.14.0"
tower = { version = "0.5.2" }
webauthn-rs = { version = "0.5.0", features = [
    "danger-allow-state-serialisation",
] }
base64 = "0.22.1"
askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
askama = { git = "https://github.com/djc/askama.git", branch = "main" }
axum-htmx = { version = "0.8.1", features = ["auto-vary"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.10.6"
futures = "0.3.30"
tokio-stream = { version = "0.1.16", features = ["sync"] }
strum = { version = "0.27.2", features = ["derive"] }
rand = "0.9.2"
reqwest = { version = "0.12.15", features = ["json"] }
surrealdb = { version = "2.3.3", features = ["kv-mem"] }
tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
axum_typed_multipart = "0.16.4"
tempfile = "3.13.0"
async-stripe = { version = "0.41.0", features = [
    "checkout",
    "runtime-tokio-hyper",
] }
gcloud-storage = "1.1.1"
async-trait = "0.1.88"
dotenvy = "0.15.7"
axum-extra = { version = "0.10.1", features = [
    "cookie",
    "query",
    "typed-header",
] }
sentry = { version = "0.43.0", default-features = false, features = [
    "curl",
    "backtrace",
    "contexts",
    "panic",
] }
argon2 = "0.5.3"
totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
dashmap = "6.1.0"
tower_governor = "0.8.0"
governor = "0.10.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
fake = { version = "4.3.0", features = ["chrono"] }
serial_test = "3.2.0"
axum-test = "18.1.0"

[profile.release]
opt-level = 3
