[package]
name = "sb_middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = "2.2.1"
uuid = "1.11.0"
serde="1.0.210"
axum="0.7.7"
serde_json = "1.0.129"
axum-htmx="0.6.0"
tower-cookies = "0.10.0"
jsonwebtoken="9.3.0"
once_cell = "1.20.2"
chrono = "0.4.38"
async-stripe = { version = "0.39.1" }
askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
askama = { git = "https://github.com/djc/askama.git", branch = "main" }
tower = "0.5.1"
validator = { version = "0.18.1", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.40.0"
tower-http = { version = "0.6.1", features = ["fs"] }
